--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
     "type": "library",
     "require": {
         "php": "^8.1",
-        "illuminate/http": "^10.0",
-        "illuminate/support": "^10.0",
-        "illuminate/pagination": "^10.0",
-        "guzzlehttp/guzzle": "^7.0"
+        "illuminate/http": "*",
+        "illuminate/support": "*",
+        "illuminate/pagination": "*"
     },
     "license": "MIT",
     "autoload": {
